--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Valentine 💖</title>
+  <title>Aryabhatta</title>
 
   <style>
     body {
@@ -39,8 +39,8 @@
 <body>
 
   <div class="card">
-    <h2>Kalai,</h2>
-    <h1>Will you be my Valentine? ❤️</h1>
+    <h2>ajith,</h2>
+    <h1>are you working ? </h1>
 
     <button onclick="yesClicked()">YES</button>
     <button id="noBtn">NO</button>
@@ -56,7 +56,7 @@
     });
 
     function yesClicked() {
-      alert("Yayyy! 💖 Valentine locked 🔐🥰");
+      alert("yes,Currently working");
     }
   </script>
 
